# computer_vision

./: .gitignore  README.md  requirements.txt  setup.cfg
bash/: launch_jupyter_in_gpu_node.sh  setup.sh  train_hpc.sh
configs/: config_drive_training.yaml  config_gan_mnist_training.yaml  config_hotdog_training.yaml  config_ph2_training.yaml  config_taco_training.yaml  config_training.yaml
configs/augmentation/: ImageNetAugs.yaml  basic_augs.yaml  basic_augs_ph2.yaml  no_augs.yaml  no_augs_ph2.yaml  object_detect_augs.yaml
configs/callbacks/: callbacks.yaml
configs/datamodule/: cifar10.yaml  drive.yaml  hotdog.yaml  mnist.yaml  ph2.yaml  taco.yaml
configs/inference/: saliency.yaml
configs/logging/: loggers.yaml  wandb.yaml
configs/loss/: bce.yaml  bce_logits.yaml  dice.yaml  focal.yaml
configs/metric/: accuracy.yaml  dice.yaml  f1_score_mine.yaml  iou.yaml  kid.yaml  recall.yaml  segmentation_metrics.yaml  specificity.yaml
configs/model/: convnet_base.yaml  gan_base.yaml  resnet18_transfer.yaml  resnet50_transfer.yaml  resnet50_transfer_one_layer.yaml  resnet_base.yaml  segnet_base.yaml  unet.yaml  unet2.yaml
configs/optimizer/: gan_basic.yaml
configs/scheduler/: constantlr.yaml  cosine.yaml  gan_scheduler.yaml
configs/trainer/: default_trainer.yaml
configs/training/: GAN_training.yaml  default_training.yaml  objectdetect_training.yaml  (+1 more)
day1/: Exercise_1_2.ipynb  Exercise_1_3.py
scripts/: data_visulisation.ipynb  objectdetect_inference.py  saliency_inference.py  taco_cooking.py  train.py  train_gan.py
src/: version.py
(+118 files in other folders)
